--- a/frontend/index.html
+++ b/frontend/index.html
@@ -362,16 +362,22 @@
                         <div class="settings-card">
                             <h3>License</h3>
                             <div class="setting-item">
-                                <label>License sheet URL</label>
-                                <input type="url" id="settingsLicenseSheetUrl" class="input-field" placeholder="https://docs.google.com/.../export?format=csv">
-                            </div>
-                            <div class="setting-item">
                                 <label>License key</label>
                                 <input type="text" id="settingsLicenseKey" class="input-field" placeholder="Your license key">
                             </div>
                         </div>
                         <div class="settings-card">
                             <h3>Sending</h3>
+                            <div class="setting-item">
+                                <label>Email send interval (seconds)</label>
+                                <input type="number" id="settingsEmailQueueInterval" class="input-field" min="30" placeholder="300">
+                                <p class="setting-hint">How often to process the send queue. 60 = demo (1 min), 300 = production (5 min). Restart app after change.</p>
+                            </div>
+                            <div class="setting-item">
+                                <label>Reply check interval (seconds)</label>
+                                <input type="number" id="settingsReplyCheckInterval" class="input-field" min="60" placeholder="300">
+                                <p class="setting-hint">How often to check for replies. 60 = demo (1 min), 300 = production (5 min). Restart app after change.</p>
+                            </div>
                             <div class="setting-item">
                                 <label>Daily email limit</label>
                                 <input type="number" id="settingsDailyLimit" class="input-field" min="1" placeholder="500">
